adding some metadata scraping

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,11 +4,11 @@ build-backend = "hatchling.build"
 
 [project]
 name = "yars"
-version = "0.1.0"
+version = "0.2.0"
 description = "YARS (Yet Another Reddit Scraper) - A Python package for scraping Reddit"
 readme = "README.md"
 license = "MIT"
-requires-python = ">=3.8"
+requires-python = ">=3.10"
 authors = [
     {name = "ktthross"},
 ]
@@ -29,6 +29,7 @@ classifiers = [
 ]
 dependencies = [
     "flask>=3.0.3",
+    "gaussian-sleep-sampler",
     "meta-ai-api>=1.2.1",
     "pygments>=2.18.0",
     "requests>=2.32.3",
@@ -41,6 +42,9 @@ Issues = "https://github.com/ktthross/yars/issues"
 
 [tool.hatch.build.targets.wheel]
 packages = ["src/yars"]
+
+[tool.uv.sources]
+gaussian-sleep-sampler = { git = "https://github.com/ktthross/gaussian_sleep_sampler" }
 
 [project.optional-dependencies]
 dev = [
